[gd_scene load_steps=14 format=2]

[ext_resource path="res://Components/Nest/Nest.gd" type="Script" id=1]
[ext_resource path="res://Components/Nest/star.png" type="Texture" id=2]
[ext_resource path="res://Components/Nest/nestwhite.png" type="Texture" id=3]
[ext_resource path="res://Components/Moon/light.png" type="Texture" id=4]
[ext_resource path="res://Assets/WCManoNegraBoldBta.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/bebas.otf" type="DynamicFontData" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 82.2908

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.13245, 0.725166, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.264901, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 59.3067, 19.3733 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -150.496, -423.943 ), Vector2( -150.496, -349.151 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.466517, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Nest" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.722702, -15.1768 )
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0.433635, 12.7197 )
scale = Vector2( 0.545237, 0.470804 )
emitting = false
amount = 30
lifetime = 0.8
one_shot = true
preprocess = 1.0
explosiveness = 1.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 50 )
gravity = Vector2( 0, -100 )
initial_velocity = 0.0
linear_accel = 1000.0
radial_accel = 100.0
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.141176, 0.141176, 0.141176, 1 )
position = Vector2( 0.433635, 12.7197 )
scale = Vector2( 0.545237, 0.470804 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.144547, 17.7786 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -150.496
margin_top = -423.943
margin_right = 328.504
margin_bottom = -236.943
custom_styles/panel = SubResource( 4 )

[node name="Title" type="Label" parent="Panel"]
margin_left = 24.1859
margin_top = 11.3439
margin_right = 156.186
margin_bottom = 53.3439
custom_fonts/font = SubResource( 5 )
text = "YOUR NEST"

[node name="InfoEgg" type="Label" parent="Panel"]
margin_left = 29.3232
margin_top = 83.4574
margin_right = 467.323
margin_bottom = 158.457
custom_fonts/font = SubResource( 6 )
text = "[X]       LAY    AN    EGG     (10   FOOD)
"
autowrap = true

[node name="InfoEat" type="Label" parent="Panel"]
margin_left = 29.3232
margin_top = 83.4574
margin_right = 467.323
margin_bottom = 158.457
custom_fonts/font = SubResource( 6 )
text = "
[C]        EAT                                              (1    FOOD     =   + 5%    ENERGY)"
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShowMenu = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_Nest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Nest_body_exited"]
